welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:17: error: not found: value T
		{setCouleurBrosse(T(i));
                                  ^